Add Jetty dependency

--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,22 @@
             <url>https://www.gnu.org/licenses/agpl-3.0-standalone.html</url>
         </license>
     </licenses>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.4.0.v20161208</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>9.4.0.v20161208</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>9.4.0.v20161208</version>
+        </dependency>
+    </dependencies>
 </project>
