--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,15 @@
             <artifactId>jetty-webapp</artifactId>
             <version>9.4.0.v20161208</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.23</version>
+        </dependency>
+        <dependency> 
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.13</version>
+        </dependency>
     </dependencies>
 </project>
