--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -9,4 +9,19 @@
         <servlet-name>default</servlet-name>
         <url-pattern>index.html</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>org.cryptonit.cloud.Application</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>org.cryptonit.cloud.Application</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>org.cryptonit.cloud.Application</servlet-name>
+        <url-pattern>/*</url-pattern>
+    </servlet-mapping>
 </web-app>
