--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>index.html</url-pattern>
+        <url-pattern>/js/*</url-pattern>
+        <url-pattern>/css/*</url-pattern>
+        <url-pattern>/fonts/*</url-pattern>
+        <url-pattern>/images/*</url-pattern>
     </servlet-mapping>
 
     <servlet>
