--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,7 @@ cache:
 jdk: oraclejdk8
 
 script:
+- nvm install node
 - (cd src/main/ui ; npm install ; ./node_modules/.bin/gulp)
 - mvn package
+- ls -l target/*.jar
