--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -7,6 +7,10 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.5.0",
+    "babel-plugin-syntax-decorators": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.6.0",
     "bootstrap-sass": "^3.3.6",
     "font-awesome": "^4.7.0",
     "jquery": "^1.12.1",
