--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -76,6 +76,9 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
+    "css-loader": "^0.28.0",
+    "font-awesome": "^4.7.0",  
+    "file-loader": "^0.11.1",
     "fs-extra": "^0.30.0",
     "history": "^2.0.0",
     "html-webpack-plugin": "^2.7.1",
@@ -88,6 +91,7 @@
     "normalize.css": "^4.1.1",
     "numeral": "^1.5.3",
     "object-hash": "^1.1.4",
+    "postcss-loader": "^1.3.3",
     "react": "^15.0.0",
     "react-bootstrap": "^0.30.2",
     "react-chartist": "^0.10.2",
