--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -106,6 +106,7 @@
     "react-router-redux": "^4.0.0",
     "react-sparklines": "^1.5.2",
     "redux": "^3.0.0",
+    "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.1",
     "sass-loader": "^3.0.0",
     "string-replace-loader": "^1.0.2",
