--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -114,7 +114,8 @@
     "truncate": "^2.0.0",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.15.0",
+    "webpack": "^2.0.0",
+    "node-sass": "^4.0.0",
     "yargs": "^4.0.0"
   },
   "devDependencies": {
