--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -77,8 +77,8 @@
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "css-loader": "^0.28.0",
-    "font-awesome": "^4.7.0",  
     "file-loader": "^0.11.1",
+    "font-awesome": "^4.7.0",
     "fs-extra": "^0.30.0",
     "history": "^2.0.0",
     "html-webpack-plugin": "^2.7.1",
@@ -86,7 +86,7 @@
     "json-loader": "^0.5.4",
     "left-pad": "^1.1.0",
     "moment": "^2.13.0",
-    "node-sass": "^3.7.0",
+    "node-sass": "^4.5.2",
     "uuid": "^3.0.1",
     "normalize.css": "^4.1.1",
     "numeral": "^1.5.3",
@@ -108,14 +108,13 @@
     "redux": "^3.0.0",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.1",
-    "sass-loader": "^6.0.3",
+    "sass-loader": "^4.1.1",
     "string-replace-loader": "^1.0.2",
     "style-loader": "^0.13.0",
     "truncate": "^2.0.0",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.6",
-    "webpack": "^2.0.0",
-    "node-sass": "^4.0.0",
+    "webpack": "^1.15.0",
     "yargs": "^4.0.0"
   },
   "devDependencies": {
@@ -125,6 +124,6 @@
     "eslint-config-standard-react": "^4.3.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
   }
 }
