--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -125,5 +125,7 @@
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^3.0.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.6.0"
   }
 }
