--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -76,6 +76,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
+    "better-npm-run": "0.0.8",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
     "font-awesome": "^4.7.0",
