--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -78,6 +78,7 @@
     "babel-runtime": "^6.3.19",
     "better-npm-run": "0.0.8",
     "css-loader": "^0.28.0",
+    "cssnano": "^3.3.2",
     "file-loader": "^0.11.1",
     "font-awesome": "^4.7.0",
     "fs-extra": "^0.30.0",
