--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -79,12 +79,15 @@
     "better-npm-run": "0.0.8",
     "css-loader": "^0.28.0",
     "cssnano": "^3.3.2",
+    "debug": "^2.6.6",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "font-awesome": "^4.7.0",
     "fs-extra": "^0.30.0",
     "history": "^2.0.0",
     "html-webpack-plugin": "^2.7.1",
     "imports-loader": "^0.6.5",
+    "ip": "^1.1.5",
     "json-loader": "^0.5.4",
     "left-pad": "^1.1.0",
     "moment": "^2.13.0",
