--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -88,6 +88,7 @@
     "html-webpack-plugin": "^2.7.1",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.5",
+    "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "left-pad": "^1.1.0",
     "moment": "^2.13.0",
