--- a/src/main/yarn/.babelrc
+++ b/src/main/yarn/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["react", "es2015", "stage-1"],
+  "presets": [["es2015", { "modules": false }], "stage-1", "react-app"],
   "passPerPreset": true,
-  "plugins": ["transform-runtime"]
+  "plugins": ["react-hot-loader/babel", "transform-runtime", "transform-object-assign"]
 }
