--- a/src/main/yarn/package.json
+++ b/src/main/yarn/package.json
@@ -11,7 +11,13 @@
     "blendid": "^4.1.0",
     "history": "^4.6.1",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-grid-layout": "^0.14.6",
+    "react-hot-loader": "next",
+    "react-image-holder": "^2.0.1",
+    "react-notification-system-redux": "^1.1.2",
+    "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-redux": "^4.0.8"
   }
