--- a/src/main/yarn/package.json
+++ b/src/main/yarn/package.json
@@ -6,8 +6,10 @@
   "author": "Mathias Brossard",
   "license": "AGPL-3.0",
   "dependencies": {
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^2.2.0",
     "blendid": "^4.1.0",
     "history": "^4.6.1",
     "react": "^15.5.4",
