Add missing loaders

--- a/src/main/yarn/package.json
+++ b/src/main/yarn/package.json
@@ -11,7 +11,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^2.2.0",
     "blendid": "^4.1.0",
+    "css-loader": "^0.28.1",
+    "file-loader": "^0.11.1",
     "history": "^4.6.1",
+    "json-loader": "^0.5.4",
+    "postcss-loader": "^2.0.5",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
@@ -21,6 +25,9 @@
     "react-notification-system-redux": "^1.1.2",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
-    "react-router-redux": "^4.0.8"
+    "react-router-redux": "^4.0.8",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8"
   }
 }
