--- a/src/main/yarn/package.json
+++ b/src/main/yarn/package.json
@@ -11,8 +11,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^2.2.0",
     "blendid": "^4.1.0",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
+    "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "json-loader": "^0.5.4",
     "postcss-loader": "^2.0.5",
