--- a/src/main/yarn/package.json
+++ b/src/main/yarn/package.json
@@ -26,8 +26,9 @@
     "react-image-holder": "^2.0.1",
     "react-notification-system-redux": "^1.1.2",
     "react-redux": "^5.0.4",
-    "react-router": "^4.1.1",
-    "react-router-redux": "^4.0.8",
+    "react-router": "^2.8.1",
+    "react-router-bootstrap": "^0.23.0",
+    "react-router-redux": "^4.0.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8"
