--- a/src/main/yarn/package.json
+++ b/src/main/yarn/package.json
@@ -17,6 +17,8 @@
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "json-loader": "^0.5.4",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
