--- a/src/main/yarn/package.json
+++ b/src/main/yarn/package.json
@@ -33,6 +33,8 @@
     "react-router-redux": "^4.0.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
-    "url-loader": "^0.5.8"
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.8",
+    "which": "^1.2.14"
   }
 }
