--- a/src/main/yarn/package.json
+++ b/src/main/yarn/package.json
@@ -31,6 +31,7 @@
     "react-router": "^2.8.1",
     "react-router-bootstrap": "^0.23.0",
     "react-router-redux": "^4.0.0",
+    "redux": "^3.6.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "underscore": "^1.8.3",
