--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -6,6 +6,7 @@
     "node-sass-chokidar": "^0.0.1",
     "npm-run-all": "^4.0.2",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
