--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -7,6 +7,7 @@
     "bootstrap-sass": "^3.3.7",
     "node-sass-chokidar": "^0.0.1",
     "npm-run-all": "^4.0.2",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4"
