--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -10,7 +10,8 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-router": "^4.1.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.1"
