--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -11,7 +11,8 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "react-router-bootstrap": "^0.24.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.1"
